config/tests/compilation_fails_checks/enum.rs
use config::prelude::*;

#[derive(Config)]
enum Enum {}

fn main() {}